updated personal archive
added before and after version of "selfie"

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
    <head>
    </head>
    <body>
-   Hi I'm Angel :)
+     Before
+     <img src="images/selfie_before.tiff" />
+     After
+     <img src="images/selfie_digital.jpg" />
    </body>
 <html>
