updated personal archive
made a new page: Gift

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <html>
    <head>
+   	<link rel="stylesheet" type="text/css" href="style.css" />
    </head>
    <body>
+   	<h1>GD I Personal Archive</h1>
+    <h4>Angel Kim</h4>
+
+    <p>Selfie
+    </p>
+
      Before
-     <img src="images/selfie_before.tiff" />
+     <img src="images/selfie_before.jpg" />
      After
-     <img src="images/selfie_digital.jpg" />
+     <img src="images/selfie_after.jpg" />
+     
+
+    <a href="gift.html">
+      Gift Documentation
+    </a>
    </body>
 <html>
