updated personal archive
updated index page and selfie page

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
    </head>
    <body>
    	<h1>GD I Personal Archive</h1>
-    <h4>Angel Kim</h4>
+    <h2>Angel Kim</h2>
 
-    <p>Selfie
-    </p>
-
-     Before
-     <img src="images/selfie_before.jpg" />
-     After
-     <img src="images/selfie_after.jpg" />
-     
-
-    <a href="gift.html">
-      Gift Documentation
+    <div> 
+    <a href="selfie.html">
+      Selfie
     </a>
+  </div>
+
+  <div>
+    <a href="gift.html">
+      It's the Thought that Counts
+    </a>
+  </div>
+
+
    </body>
 <html>
