updated personal archive
index, gift, selfie

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     </a>
   </div>
 
+  <div>
+    <a href="thenewyorker.html">
+      The Pen is Mightier
+    </a>
+  </div>
+
 
    </body>
 <html>
