updated personal archive

--- a/thenewyorker.html
+++ b/thenewyorker.html
@@ -27,7 +27,7 @@
   </p>
 
   <p>
-    The most memorable place in the neighborhood was an old and tiny family-owned corner shop called <i>Mr. Kang&apos;s</i> , which was not even the official name of the shop; no one from my family recalls the real name. I often went to that shop holding my grandma&apos;s hand and came back home licking a strawberry-flavored ice-cream. My mom told me that Mr. Kang&apos;s existed since she was a young girl; whenever I visited the shop with my mom, Mr. Kang would tell me funny stories that started with, “You know what, when your mom was your age…” Memories I have of the shop would make me feel nostalgic and warm my heart.
+    The most memorable place in the neighborhood was an old and tiny family-owned corner shop called <i>Mr. Kang&apos;s</i> , which was not even the official name of the shop; no one from my family recalls the real name. I often went to that shop holding my grandma&apos;s hand and came back home licking a strawberry-flavored ice-cream. My mom told me that Mr. Kang&apos;s existed since she was a young girl; whenever I visited the shop with my mom, Mr. Kang would tell me funny stories that started with, &ldquo;You know what, when your mom was your age&hellip;&rdquo; Memories I have of the shop would make me feel nostalgic and warm my heart.
   </p>
 
   <p>
