updated the new yorker page
typekit

--- a/thenewyorker.html
+++ b/thenewyorker.html
@@ -1,9 +1,11 @@
 <html>
    <head>
+    <script type="text/javascript" src="//use.typekit.net/tbl4jfy.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
    	<link rel="stylesheet" type="text/css" href="style.css" />
    </head>
    <body>
-   	<h1>The Pen is Mightier</h1>
+   	<div class=".tk-pt-sans"><h1>The Pen is Mightier</h1></div>
     
     <h3><i>The New Yorker:</i>The Beauty of Slow Design</h3>
 
