updated personal archive
nemesis

--- a/nemesis.html
+++ b/nemesis.html
@@ -4,20 +4,65 @@
    </head>
    <body>
    	<h1>Nemesis</h1>
-   
-   <div class="nemesis-sketches">
-    <img src="images/nemesis_4.jpg" />
-    <img src="images/nemesis_5.jpg" />
-    <img src="images/nemesis_2.jpg" />
-    <img src="images/nemesis_3.jpg" />
-    <img src="images/nemesis_1.jpg" />
-  </div>
 
-    <p>Ideas, conepts and studies. </p>
+<h3> <i>Seren!ce</i> </h3>
+
+<div class="serenicelogo"> <img src="images/serenice_logo.jpg" /> </div>
+
+<h4> Brand Identity </h4>
+    <p> I love ice cream. I love ice cream so much that I would love to eat it every day. Unfortunately, I am aware that eating ice cream every day is not a good idea. Most ice cream products are made with milk and sugar, which build up fat layers and increase blood sugar levels. So I approached this branding project with a hope of eating a healthy ice cream product that does not have a harmful effect on my body. And I asked myself a question as a starting point: how can I make a healthy ice cream that anyone can eat every day? </p>
+
+
+<p> <i>Seren!ce</i> features non-fat, sugar-free ice cream. The main ingredients of <i>Seren!ce</i> products are non-fat milk and <i> Stevia </i>, which is a calorie-free natural sugar substitute that comes from plants. With these ingredients, the calories of <i>Seren!ce</i> products are much lower than other competitive ice cream brands. <i>Seren!ce</i> targets wide ranges of consumers, including those who are concerned with their weight, those who want to enjoy ice cream on a regular basis while maintaining a healthy lifestyle, and those who have diet limitations due to health problems such as diabetes and high blood pressure. Anyone can enjoy <i>Seren!ce</i> ice cream every day because it is healthy and delicious! </p>
+
+<div class="packagingtop">
+  <img src="images/serenice_packaging_top.jpg" />
+</div>
+<div class="packagingfront">
+  <img src="images/serenice_packaging_front.jpg" />
+  <img src="images/serenice_packaging_front_print.jpg" />
+  <img src="images/serenice_packaging_front_print_2.jpg" />
+  <img src="images/serenice_packaging_front_print_3.jpg" />
+</div>
+
+<h4> Packaging </h4>
+
+<p> <i>Activia</i>&apos;s yogurt packaging inspired me to make this unique packaging design for <i>Seren!ce</i>. <i>Activia</i>&apos;s packaging has four cups of yogurt that are attached to each other so that the consumers have to snap one of the cups that they are about to eat. I applied this concept to my <i>Seren!ce</i> packaging design. As I mentioned earlier, I would love to eat ice cream every day. So I designed eight ice cream containers that are attached to each other, and each are labeled from Monday to Sunday. And there is one extra ice cream named <i>serendipity!</i> that the consumers can treat themselves with anytime on any day. This packaging is where the brand name came from. </p>
+
+<h4> Brand Name </h4>
+
+<p>I was frustrated when I was designing the packaging. I wanted to keep the even number of containers per pack, but there are only seven days per week. But the limitation of the packaging led me to come up with an idea of giving the consumers one extra ice cream. This one extra container was not a drawback; it was rather a turning point, a happy accident. So I combined &ldquo;serendipity&rdquo; and &ldquo;ice cream&rdquo; to finalize the brand name <i>Seren!ce</i>. It is also an unexpected gift in the consumer&apos;s view point because they are getting an extra ice cream to treat themselves whenever they want. </p>
+
+
+<h4> Spoon and Freezer </h4>
+<div class="spoon">
+  <img src="images/serenice_spoon.jpg" />
+  <img src="images/serenice_fridge.jpg" />
+</div>
+<div class="fridgephoto">
+  <img src="images/serenice_fridge_photoshop_2.jpg" />
+</div>
+
+<h4> Documentation: Packaging </h4>
+<div class="documentation">
+  <img src="images/serenice_1.jpg" />
+  <img src="images/serenice_2.jpg" />
+  <img src="images/serenice_3.jpg" />
+  <img src="images/serenice_4.jpg" />
+  <img src="images/serenice_5.jpg" />
+  <img src="images/serenice_6.jpg" />
+  <img src="images/serenice_7.jpg" />
+  <img src="images/serenice_8.jpg" />
+  <img src="images/serenice_9.jpg" />
+  <img src="images/serenice_10.jpg" />
+  <img src="images/serenice_11.jpg" />
+</div>
+   
+   
 
   <div>
     <a href="index.html">
-      Home
+      There's No Place Like Home
     </a>
   </div>
 
