updated personal archive

--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
    	<h1>GD I Personal Archive</h1>
     <h2>Angel Kim</h2>
 
-    <div> 
+    <div class="links"> 
     <a href="selfie.html">
       Selfie
     </a>
-  </div>
-
-  <div>
+  
     <a href="gift.html">
       It's the Thought that Counts
     </a>
-  </div>
 
-  <div>
+  
     <a href="thenewyorker.html">
       The Pen is Mightier
     </a>
-  </div>
-
-  <div>
+  
      <a href="nemesis.html">
       Nemesis
      </a>
+
+    <a href="master.html">
+      Become the Master
+    </a>
   </div>
 
 
