--- a/nemesis.html
+++ b/nemesis.html
@@ -8,22 +8,22 @@
 <h3> <i>Seren!ce</i> </h3>
 
 <div class="serenicelogo"> <img src="images/serenice_logo.jpg" /> </div>
-
 <h4> Brand Identity </h4>
     <p> I love ice cream. I love ice cream so much that I would love to eat it every day. Unfortunately, I am aware that eating ice cream every day is not a good idea. Most ice cream products are made with milk and sugar, which build up fat layers and increase blood sugar levels. So I approached this branding project with a hope of eating a healthy ice cream product that does not have a harmful effect on my body. And I asked myself a question as a starting point: how can I make a healthy ice cream that anyone can eat every day? </p>
 
 
 <p> <i>Seren!ce</i> features non-fat, sugar-free ice cream. The main ingredients of <i>Seren!ce</i> products are non-fat milk and <i> Stevia </i>, which is a calorie-free natural sugar substitute that comes from plants. With these ingredients, the calories of <i>Seren!ce</i> products are much lower than other competitive ice cream brands. <i>Seren!ce</i> targets wide ranges of consumers, including those who are concerned with their weight, those who want to enjoy ice cream on a regular basis while maintaining a healthy lifestyle, and those who have diet limitations due to health problems such as diabetes and high blood pressure. Anyone can enjoy <i>Seren!ce</i> ice cream every day because it is healthy and delicious! </p>
 
-<div class="packagingtop">
-  <img src="images/serenice_packaging_top.jpg" />
-</div>
+
+  <div class="packagingtop"> <img src="images/serenice_packaging_top.jpg" /> </div>
+
 <div class="packagingfront">
   <img src="images/serenice_packaging_front.jpg" />
   <img src="images/serenice_packaging_front_print.jpg" />
   <img src="images/serenice_packaging_front_print_2.jpg" />
   <img src="images/serenice_packaging_front_print_3.jpg" />
 </div>
+
 
 <h4> Packaging </h4>
 
@@ -35,15 +35,18 @@
 
 
 <h4> Spoon and Freezer </h4>
-<div class="spoon">
-  <img src="images/serenice_spoon.jpg" />
-  <img src="images/serenice_fridge.jpg" />
-</div>
-<div class="fridgephoto">
-  <img src="images/serenice_fridge_photoshop_2.jpg" />
-</div>
+
+  <div class="spoon"> <img src="images/serenice_spoon.jpg" /> </div>
+  
+
+  <div class="fridgephoto"> 
+    <img src="images/serenice_fridge.jpg" />
+    <img src="images/serenice_fridge_photoshop_2.jpg" />
+     </div>
+
 
 <h4> Documentation: Packaging </h4>
+
 <div class="documentation">
   <img src="images/serenice_1.jpg" />
   <img src="images/serenice_2.jpg" />
