--- a/master.html
+++ b/master.html
@@ -5,11 +5,25 @@
    <body>
    	<h1>Become the Master</h1>
     
+  <h4> Idea Generations </h4>
     <div class="manual">
 <img src="images/iron_manual.jpg" />
+<p> This is a comic strip on how to iron a shirt with a hairdryer. </P>
   <img src="images/coffee_manual.jpg" />
+<p> This diagram demonstrates how to make a cup of coffee without using a coffee maker. </p>
   <img src="images/earphone_manual.jpg" />
+<p> This diagram demonstrates how to organize a set of earphones without getting them tangled. </p>
   </div>
+
+<h4> User Testing </h4>
+  <div>
+    <img src="images/master_test.jpg"/>
+    <p> For the user testing, I made a video demonstrating step-by-step process of my way of organizing earphones, and I also provided a supplementary booklet. During the user testing, I noticed that the users were struggling with flipping the pages of the booklet while they had earphones on their hands. </p> </div>
+
+<h4> Final Product </h4>
+<div>
+  <img src="images/master_final.jpg"/>
+  <p> After the user testing in class, I also tested my roommates and my friends outside of the class. They commented that the instructions in the booklet were more easily accessible than the video. I changed the format of the booklet to an instruction poster, so the users would not waste their time flipping through pages while they are learning. </p> </div>
 
   <div>
      <a href="index.html">
