updated index page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <a href="master.html">
       Become the Master
     </a>
+
+    <a href="monograph.html">
+      Monograph
+    </a>
   </div>
 
 
