updated personal archive

--- a/index.html
+++ b/index.html
@@ -1,38 +1,57 @@
 <html>
    <head>
-   	<link rel="stylesheet" type="text/css" href="style.css" />
+    <title> Angel Kim | GD I Personal Archive </title>
+   	<link rel="stylesheet" type="text/css" href="styleindex.css" />
    </head>
    <body>
-   	<h1>GD I Personal Archive</h1>
+   	<h1>Graphic Design I: Personal Archive</h1>
     <h2>Angel Kim</h2>
 
-    <div class="links"> 
-    <a href="selfie.html">
+  <ul>
+    <li class="links">
+    <div>
+      <a href="selfie.html">
       Selfie
-    </a>
-  
-    <a href="gift.html">
-      It's the Thought that Counts
-    </a>
+      </a>
+    </div>
 
-  
-    <a href="thenewyorker.html">
+    <div>
+      <a href="gift.html">
+      It's the Thought that Counts
+      </a>
+    </div>
+
+    <div>
+      <a href="thenewyorker.html">
       The Pen is Mightier
-    </a>
-  
+      </a>
+    </div>
+
+    <div>
      <a href="nemesis.html">
       Nemesis
      </a>
+    </div>
 
-    <a href="master.html">
+    <div>
+      <a href="master.html">
       Become the Master
-    </a>
+      </a>
+    </div>
 
-    <a href="monograph.html">
+    <div>
+      <a href="monograph.html">
       Monograph
-    </a>
-  </div>
+      </a>
+    </div>
 
+    <div>
+      <a href="loveletter.html">
+      Love Letter
+      </a>
+    </div>
+    </li>
+  </ul>
 
    </body>
 <html>
