--- a/loveletter.html
+++ b/loveletter.html
@@ -1,7 +1,7 @@
 <html>
    <head>
-    <title>It's the Thought That Counts | The Importance of Gift Giving</title>
-   	<link rel="stylesheet" type="text/css" href="stylegift.css" />
+    <title>Love Letter | Dedicated to Jae Hoon Lee</title>
+   	<link rel="stylesheet" type="text/css" href="styleloveletter.css" />
    </head>
    <body>
    
