--- a/monograph.html
+++ b/monograph.html
@@ -1,6 +1,7 @@
 <html>
    <head>
-   	<link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Monograph | Oriental Pin-Up Girls</title>
+   	<link rel="stylesheet" type="text/css" href="stylemonograph.css" />
    </head>
    <body>
    
@@ -16,48 +17,52 @@
 
     <p> I had around 50 images when I started this project. As I researched more about history of pin-ups, I ended up having more than 300 images of Elvgren paintings. Then I categorized those images into several categories and sub-categories. Among those 300 images, I chose my 12 favorites to work with. </p>
 
-<div class="Elvgren">
-     <img src="images/pin_13.jpg" />
-     <img src="images/pin_14.jpg" />
-     <img src="images/pin_15.jpg" />
-     <img src="images/pin_16.jpg" />
-     <img src="images/pin_17.jpg" />
-     <img src="images/pin_18.jpg" />
-     <img src="images/pin_19.jpg" />
-     <img src="images/pin_20.jpg" />
-     <img src="images/pin_21.jpg" />
-     <img src="images/pin_22.jpg" />
-     <img src="images/pin_23.jpg" />
-     <img src="images/pin_24.jpg" />
+    <div class="Elvgren">
+     <img src="images_monograph/pin_13.jpg" />
+     <img src="images_monograph/pin_14.jpg" />
+     <img src="images_monograph/pin_15.jpg" />
+     <img src="images_monograph/pin_16.jpg" />
+     <img src="images_monograph/pin_17.jpg" />
+     <img src="images_monograph/pin_18.jpg" />
+     <img src="images_monograph/pin_19.jpg" />
+     <img src="images_monograph/pin_20.jpg" />
+     <img src="images_monograph/pin_21.jpg" />
+     <img src="images_monograph/pin_22.jpg" />
+     <img src="images_monograph/pin_23.jpg" />
+     <img src="images_monograph/pin_24.jpg" />
     </div>
 
     <p> I have always wondered why there is no such pin-up culture in Korea. And after the research, it is clear that white girls with blonde hair dominate in Elvgren's paintings. So I started this project with this question: How would Korean pin-up culture be presented if there is one? </p>
      
-<h4>Oriental Pin-up Girls: the Red Book</h4>
+    <h4>Oriental Pin-up Girls: the Red Book</h4>
 
     <p> I did photo-shoots of myself dressing in Korean traditional outfits and posing like Elvgren's pin-up paintings. &#40; The photo-shoot process was PAINFUL. Ugh. &#41; After taking photos, I used Photoshop to add traditional hair style and alter the colors of my only outfit. </p>
 
     <p> I wanted to make a book featuring these photos of Korean pin-up girls because it was the best way of communication of that time period. And I chose the color red for the cover because it has a connotation of being sensual and rated-R in Korea. The book is made to be viewed from right to left because that was the way how most Asian countries adopted for reading books. And since the purpose of pin-up is to take one's favorite photograph and "pin" it up on the wall or other surfaces, I made the images of pin-up girls detachable, making them available for pin-ups. </p>
 
-<div class="pinup_doc">
-     <img src="images/pin_1.jpg" />
-     <img src="images/pin_2.jpg" />
-     <img src="images/pin_3.jpg" />
-     <img src="images/pin_4.jpg" />
-     <img src="images/pin_5.jpg" />
-     <img src="images/pin_6.jpg" />
-     <img src="images/pin_7.jpg" />
-     <img src="images/pin_8.jpg" />
-     <img src="images/pin_9.jpg" />
-     <img src="images/pin_10.jpg" />
-     <img src="images/pin_11.jpg" />
-     <img src="images/pin_12.jpg" />
-</div>
+    <div class="pinup_doc">
+     <img src="images_monograph/pin_1.jpg" />
+     <img src="images_monograph/pin_2.jpg" />
+     <img src="images_monograph/pin_3.jpg" />
+     <img src="images_monograph/pin_4.jpg" />
+     <img src="images_monograph/pin_5.jpg" />
+     <img src="images_monograph/pin_6.jpg" />
+     <img src="images_monograph/pin_7.jpg" />
+     <img src="images_monograph/pin_8.jpg" />
+     <img src="images_monograph/pin_9.jpg" />
+     <img src="images_monograph/pin_10.jpg" />
+     <img src="images_monograph/pin_11.jpg" />
+     <img src="images_monograph/pin_12.jpg" />
+    </div>
 
 
 
+    <ul>
+    <li class="index">
     <a href="index.html">
       There's No Place Like Home
     </a>
+    </li>
+  </ul>
    </body>
 <html>
