--- a/selfie.html
+++ b/selfie.html
@@ -1,32 +1,39 @@
 <html>
    <head>
-   	<link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Selfie | Start with the Most Boring Fact</title>
+   	<link rel="stylesheet" type="text/css" href="styleselfie.css" />
    </head>
    <body>
    	<h1>Selfie</h1>
+    <h3>Start with the Most Boring Fact</h3>
     
-
    <div>
-    <img src="images/selfie_before.jpg" />
+    <img src="images_selfie/before.jpg" />
    </div>
 
    <div>
-    <p>Before</p>
+    <h4>Starting with the Most Boring Fact about Me</h4>
+    <p>For this assignment, we had only an hour to create a self-portrait of ourselves. I started brainstorming with the most "boring" and obvious fact of myself: I am from Southern California. Okay. So what about California is somewhat interesting? Oh, there is Disneyland in my neighborhood. But guess what, I do not like Disneyland despite the fact that it is well-known as "the happiest place on earth." I do not like how I have to wait in long lines for hours just to go on a 30seconds ride; I do not like how it is crowded everywhere. And everything is super overpriced. Seriously, three bucks for a tiny cup of ice cream? I would rather go to Target and buy a huge tub of ice cream with the same price. Anyway, I decided to draw my angry face using the Disney Logo.</p>
    </div>
 
    <div>
-    <img src="images/selfie_after.jpg" />
+    <img src="images_selfie/after.jpg" />
    </div>
 
    <div>
-    <p>After</p>
+    <h4>Clean &amp; Clear</h4>
+    <p>To improve my self-portrait, I used Adobe Illustrator to create a digital version. There is no significant changes, but I am satisfied with how it looks cleaner with sharper edges.</p>
    </div>
      
+    <ul>
+    <li class="index">
     <div>
     <a href="index.html">
       There's No Place Like Home
     </a>
     </div>
+    </li>
+    </ul>
 
 
    </body>
