--- a/thenewyorker.html
+++ b/thenewyorker.html
@@ -1,16 +1,14 @@
 <html>
    <head>
-    <script type="text/javascript" src="//use.typekit.net/tbl4jfy.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-   	<link rel="stylesheet" type="text/css" href="style.css" />
+   	<link rel="stylesheet" type="text/css" href="stylethenewyorker.css" />
+    <title>The Pen Is Mightier | The Beauty of Slow Design</title>
    </head>
    <body>
-   	<div class=".tk-pt-sans"><h1>The Pen is Mightier</h1></div>
-    
+   	<h1>The Pen is Mightier</h1>
     <h3><i>The New Yorker:</i>The Beauty of Slow Design</h3>
 
 
-<img src="images/newyorker_1.png" />
+<img src="images_thenewyorker/newyorker_1.png" />
 
 <div>
   <p>
@@ -23,26 +21,26 @@
   <h4>Personal Anecdote: <i>Mr. Kang's</i>
 </div>
 
-<img src="images/newyorker_2.jpg" />
+<img src="images_thenewyorker/newyorker_2.jpg" />
 
 <div>
   <p>
     I was born in Seoul, Korea, but I do not have many memories of my hometown since I moved to China and spent most of my childhood there. Luckily, I could go back to Korea once every two or three years in the summer to visit my grandparents who are still in Seoul. And most of the images I perceived about my hometown were shaped whenever I went back to my grandparents&apos; neighborhood. In my memory, the neighborhood was a very peaceful area: groups of children chatted and walked on the unpaved road, small red-bricked houses stood right next to each other, and my grandparents&apos; home was at the end of a red-brick-walled alley.
   </p>
 
-  <img src="images/newyorker_3.jpg" />
+  <img src="images_thenewyorker/newyorker_3.jpg" />
 
   <p>
     The most memorable place in the neighborhood was an old and tiny family-owned corner shop called <i>Mr. Kang&apos;s</i> , which was not even the official name of the shop; no one from my family recalls the real name. I often went to that shop holding my grandma&apos;s hand and came back home licking a strawberry-flavored ice-cream. My mom told me that Mr. Kang&apos;s existed since she was a young girl; whenever I visited the shop with my mom, Mr. Kang would tell me funny stories that started with, &ldquo;You know what, when your mom was your age&hellip;&rdquo; Memories I have of the shop would make me feel nostalgic and warm my heart.
   </p>
 
-<img src="images/newyorker_4.jpg" />
+<img src="images_thenewyorker/newyorker_4.jpg" />
 
   <p>
     Whenever I visited my grandparents every two or three years, I noticed slight changes around the neighborhood: there were less children walking but more cars on the street. There were fewer small red-bricked houses but more tall buildings. Fortunately, my grandparents  house and <i>Mr. Kang&apos;s</i> were still located at the opposite end of the red-brick-walled alley, unchanged.
   </p>
 
-  <img src="images/newyorker_5.jpg" />
+  <img src="images_thenewyorker/newyorker_5.jpg" />
 
   <p>
     I have not visited my grandparents for a while. The last time I visited Korea was the summer before I left China and moved to California in 2008. When I was in the cab looking at the window, I was shocked and overwhelmed by how much Seoul had changed: the groups of children walking had disappeared, instead more cars were parked on nicely paved roads and small red-bricked houses were transformed into gray and cold-looking skyscrapers. I was afraid that I would not be able to recognize my grandparents&apos; home, and of course <i>Mr. Kang&apos;s</i> . The cab stopped at a familiar-looking entry of an alley. And I saw, among all the unfamiliar buildings and stores, the old tiny corner shop was still in the same spot. I was so glad and thankful. I finally felt comfortable and reassured among all these things that I had never seen around the neighborhood.
@@ -53,38 +51,41 @@
   <h4>The Beauty of Slow Design</h4>
 </div>
 
-<img src="images/newyorker_6.jpg" />
+<img src="images_thenewyorker/newyorker_6.jpg" />
 
 <div>
 <p>
   Innovative modifications and adaptations are absolutely necessary in the rapidly and frequently changing society, especially in the design fields. But I would like to raise a couple of questions: what is wrong with keeping a rarely changed design for a long time if the design itself is distinctive and noteworthy? Will the readers and the users who have built their long-term relationship with their favorite publications accept and appreciate the sudden changes?
 </p>
 
-<img src="images/newyorker_7.jpg" />
+<img src="images_thenewyorker/newyorker_7.jpg" />
 
 <p>
   I believe that slowly developed and modified designs provoke sentiment and emotion; they are often associated with the user&apos;s nostalgia and the reminiscences from the past. <i>The New Yorker</i>&apos;s effort to reconstruct and modernize the design and editorial format based on their classical philosophy is a great example of the slow design movement. Since it was published in 1925, a countless number of long-term subscribers have spent their Mondays with printed copies of <i>The New Yorker</i>. They would recognize the distinctive and whimsical <i>Irvin</i> typeface of the headlines; they would create special scrapbooks or personal archives with their favorite cover designs, articles, editorials and comics; and they would conjure up specific recollections when they saw and made connections with the specific details of the publication. <i>The New Yorker</i> became a part of the readers&apos; lives. They established a special relationship with each other over a long period of time in the same way that I am fond of my grandma&apos;s small neighborhood. 
 </p>
 
-<img src="images/newyorker_8.jpg" />
+<img src="images_thenewyorker/newyorker_8.jpg" />
 
 <p>
   Now, imagine that the editors of <i>The New Yorker</i> decided to renovate every aspect of the publication: new typefaces, layouts, formats, even a different size and shape of the magazine. Will the readers, who have been adjusted to <i>The New Yorker</i>&apos;s slow design movement, celebrate and be easily accustomed to these changes? The unwarned renovation of <i>The New Yorker</i> is equivalent to the industrial development within my grandma&apos;s neighborhood. It is something that most people do not appreciate or even wanted in the first place. The unnecessary modifications of the design (even though it is hypothetical) might portray <i>The New Yorker</i> as a desperate and outdated magazine which attempting to get the public&apos;s attention in the rapidly shifting field of publication design. We should be aware that there is nothing wrong with a familiar and recognizable design. <i>The New Yorker</i>&apos;s original design from the first issue was sophisticated: it had simplicity and minimalistic characteristics within fancy and whimsical qualities, both functional and aesthetically pleasing. Thus reconstructing the classical design and layout with modern technology is a clever and effective approach to improve the design without diminishing the timeless quality. 
 </p>
 </div>
 
-<img src="images/newyorker_9.jpg" />
+<img src="images_thenewyorker/newyorker_9.jpg" />
 
-<div class="conclusion">
+<div>
+  <h4>*********************************************************************</h4>
   <p>
     Just like how the little corner shop in my grandma&apos;s neighborhood remains unchanged over time and greets me whenever I visit, <i>The New Yorker</i>&apos;s subtle changes will enhance their timeless and distinctive quality rather than forfeiting their reputation. The slow design movement is not a weakness. It is actually a strength that provides unique insight to the design among the fast-paced design industry.</p>
 </div>
 
-  <div>
+  <ul>
+    <li class="index">
     <a href="index.html">
       There's No Place Like Home
     </a>
-  </div>
+    </li>
+  </ul>
 
 
    </body>
